<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

<group android:checkableBehavior="single">
    <item android:id="@+id/home"
        android:icon="@drawable/home_clipart"
        android:title="@string/home"/>

    <item android:id="@+id/recipes"
        android:icon="@drawable/recipeview_clipart"
        android:title="@string/recipes"/>

    <item android:id="@+id/pantry"
        android:icon="@drawable/pantry_clipart"
        android:title="@string/pantry"/>

    <item android:id="@+id/groceries"
        android:icon="@drawable/shopping_cart_clipart"
        android:title="@string/groceries"/>

    <!--<item android:id="@+id/settings"
        android:title="@string/settings"
        android:icon="@drawable/settings"/>-->

</group>
    <group >
        <item
            android:id="@+id/logout"
            android:title="@string/logout"
            android:icon="@drawable/logout"/>
    </group>
</menu>