<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GroceriesFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/grocery_to_add"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/new_grocery_item"
                    android:inputType="textPersonName" />

                <Button
                    android:id="@+id/add_grocery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/lightblue"
                    android:text="@string/add_an_item"
                    android:textSize="14sp" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/grocery_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </androidx.recyclerview.widget.RecyclerView>

            <Button
                android:id="@+id/done_shopping"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/lightblue"
                android:text="@string/done_shopping"
                style="?android:attr/borderlessButtonStyle"
                android:textSize="14sp" />

            <Button
                android:id="@+id/check_pantry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/see_whats_at_home"
                android:background="@color/lightblue"
                style="?android:attr/borderlessButtonStyle"
                android:textSize="14sp" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>