<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/paleblue"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="59dp" />

    <ImageView
        android:id="@+id/logo_imageView"
        android:layout_width="308dp"
        android:layout_height="208dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/chef" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="59dp" />

    <TextView
        android:id="@+id/continuebutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/continue_without_an_account"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightblue"
        android:text="@string/register_with_email"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp" />

    <Button
        android:id="@+id/emailButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightblue"
        android:text="@string/sign_in_with_email"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16sp" />


</LinearLayout>

