<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ViewRecipeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/paleblue">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="2dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv"
                android:layout_width="match_parent"
                android:layout_height="75dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/paleblue">

                    <ImageView
                        android:id="@+id/recipe_image"
                        android:layout_width="75dp"
                        android:layout_height="75dp"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginRight="5dp" />

                    <TextView
                        android:id="@+id/recipe_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_toRightOf="@+id/recipe_image"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="30dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:gravity="right|left"
                    android:text="Cooking\nTime:"
                    android:textColor="@color/black"

                    android:textAlignment="gravity" />

                <TextView
                    android:id="@+id/view_cook_time"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:background="@color/paleblue"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="30dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:gravity="right|left"
                    android:text="Prep\nTime:"
                    android:textColor="@color/black"

                    android:textAlignment="gravity" />

                <TextView
                    android:id="@+id/view_prep_time"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:background="@color/paleblue"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="30dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:gravity="right|left"
                    android:text="Serving\nSize:"
                    android:textColor="@color/black"
                    android:textAlignment="gravity" />

                <TextView
                    android:id="@+id/view_serving_size"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:background="@color/paleblue"
                    android:textSize="20sp" />

            </LinearLayout>


            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/ingredients"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/ingredients_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/lightpaleblue"
                android:textSize="16sp" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/directions"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/directions_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/lightpaleblue"
                android:textSize="16sp" />

            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/notes"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/notes_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/lightpaleblue"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="70dp" />

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_favorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="16dp"
        android:backgroundTint="@color/colorPrimary"
        android:src="@drawable/favorite" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_shop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        app:layout_anchorGravity="top|end"
        android:layout_margin="16dp"
        android:backgroundTint="@color/colorPrimary"
        android:src="@drawable/cart" />



</FrameLayout>